<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MediFoFo</string>
    <string name="facebook_app_id">784689075028224</string>

    <!-- Activity Titles -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_user_information">User Information</string>
    <string name="title_activity_symptom_checker">Symptom Checker</string>
    <string name="title_activity_comment">Comment to Doctor</string>
    <string name="title_activity_personal_health_record">Personal Health Record</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_find_hospital">Find Hospital</string>
    <string name="title_activity_select_location">Select Location</string>
    <string name="title_activity_doctor_list">Doctor List</string>
    <string name="medifofo_logo">Medifofo logo</string>
    <string name="grid_row">grid row</string>

    <!-- Email Form -->
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="user_year_example">ex) 1992</string>
    <string name="user_year">YYYY</string>
    <string name="user_month">MM</string>
    <string name="user_day">DD</string>
    <string name="user_country">Country</string>
    <string name="user_men">Men</string>
    <string name="user_women">Women</string>
    <string name="user_phr">Personal Health Record</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_register">Register</string>
    <string name="button_forgot_password">Forgot password?</string>
    <string name="button_have_account">Have an account? Log in</string>
    <string name="button_login">LOGIN</string>

    <!-- String about PersonalInputActivity -->
    <string name="user_for">For</string>
    <string name="user_gender">Gender</string>
    <string name="user_birth">Birthday</string>
    <string name="text_lets_go_symptom">Let\'s go symptom checker</string>
    <!-- String about ResetPasswordActivity -->
    <string name="text_send_email">We\'ll send to you an Email to reset your password.</string>
    <string name="button_send">SEND</string>

    <!-- String about Error -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Please enter at least 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_no_gender">Please press one of the men and women.</string>
    <string name="error_no_password">This field is required</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_field">This field is incorrect</string>
    <string name="error_login">The password is invalid or There is no user record corresponding to this identifier.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String about Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_name">my name</string>
    <string name="navigation_age">my age</string>
    <string name="navigation_search">Search Location</string>
    <string name="navigation_about_us">About Us</string>
    <string name="navigation_phr">PHR</string>
    <string name="navigation_qna">Q &amp; A</string>
    <string name="navigation_share">Share</string>
    <string name="navigation_logout">Logout</string>
    <string name="navigation_settings">Settings</string>
    <string name="main_progress_title">Logout loading...</string>

    <!-- String about PHR Activity-->
    <string name="phr_height">Height (kg)</string>
    <string name="phr_weight">Weight (kg)</string>
    <string name="phr_blood">Blood pressure / Blood type</string>
    <string name="phr_medicine">Medicine list</string>
    <string name="phr_allergy">Allergy</string>
    <string name="phr_history">History</string>
    <string name="phr_sleeptime">Sleep time</string>
    <string name="phr_dailystride">Daily stride</string>
    <string name="phr_save_button">SAVE YOUR INFORMATION</string>

    <!-- String about treatment Dialog -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_title">Refine your symptoms</string>
    <string name="dialog_scale">● Please pick level about your sickness.</string>
    <string name="dialog_question">Question</string>
    <string name="dialog_comment">Comment</string>
    <string name="dialog_user_comment">Please tell your doctor what you want to say.</string>
    <string name="button_dialog_finish">Finish</string>

    <string name="search_location_button">Find nearby hospital</string>
    <string name="search_location">ex) Location, Address</string>
    <string name="title_activity_maps">Map</string>

    <string name="get_place">Get place</string>
    <string name="user_comment">Comment</string>
    <string name="user_comment_title">Please write comment what you want to say.</string>
    <string name="detail_open">Open</string>
    <string name="detail_closed">Closed</string>
</resources>
