<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item android:title="@string/navigation_about">
            <menu>
                <item
                    android:id="@+id/navigation_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/navigation_about_us" />
                <item
                    android:id="@+id/navigation_qna"
                    android:icon="@drawable/ic_menu_qna"
                    android:title="@string/navigation_qna" />

                <item
                    android:id="@+id/navigation_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/navigation_share" />
                <item
                    android:id="@+id/navigation_feedback"
                    android:icon="@drawable/ic_menu_feedback"
                    android:title="@string/navigation_feedback" />

            </menu>
        </item>


        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/navigation_settings" />

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/navigation_logout" />
    </group>

</menu>