<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.awesome.medifofo.activity.SignUpActivity">

    <ScrollView
        android:id="@+id/form_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/errorText">

                <AutoCompleteTextView
                    android:id="@+id/user_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="8pt" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/errorText">

                <AutoCompleteTextView
                    android:id="@+id/user_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="8pt" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/errorText">

                <AutoCompleteTextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="8pt"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/errorText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/errorText">

                <EditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_password"
                    android:imeActionId="@+id/ime_password"
                    android:imeActionLabel="@string/title_activity_login"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="8pt" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_birth"
                android:textSize="4pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_user_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/errorText">

                    <AutoCompleteTextView
                        android:id="@+id/user_month"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:hint="@string/user_month"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:textSize="7pt" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_user_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/errorText">

                    <AutoCompleteTextView
                        android:id="@+id/user_day"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:hint="@string/user_day"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:textSize="7pt" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_user_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/errorText">

                    <AutoCompleteTextView
                        android:id="@+id/user_year"
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:hint="@string/user_year"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:textSize="7pt" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/user_gender"
                android:textSize="4pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/user_man"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_selector2"
                    android:text="@string/user_men"
                    android:textColor="@color/gray"
                    android:textSize="6pt" />

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="wrap_content">

                </LinearLayout>

                <Button
                    android:id="@+id/user_woman"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_selector2"
                    android:text="@string/user_women"
                    android:textColor="@color/gray"
                    android:textSize="6pt" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_country"
                android:textSize="4pt" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_sign_up_country"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:dropDownWidth="300dp"
                android:popupTheme="@android:style/ThemeOverlay.Material.Light"
                android:textColor="@color/black"
                android:textSize="8.5pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/user_phr"
                android:textSize="4pt" />

            <include
                layout="@layout/content_phr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_selector"
                android:text="@string/button_register"
                android:textColor="@color/white"
                android:textSize="7.5pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"></LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
