<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.awesome.medifofo.activity.CommentActivity"
    tools:showIn="@layout/activity_comment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/medifofo_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/user_comment_title"
            android:textColor="@color/black"
            android:textSize="7.5pt" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_send_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/errorText">

            <AutoCompleteTextView
                android:id="@+id/send_user_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_comment"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                android:textSize="8pt" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_send_comment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_selector"
            android:text="@string/button_send"
            android:textColor="@color/white"
            android:textSize="7.5pt" />

    </LinearLayout>


</LinearLayout>
