<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phr_person" />

            <EditText
                android:id="@+id/phr_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_height"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:padding="3dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/phr_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/text_margin_small"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_weight"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textColorHint="@color/colorPrimary"
                android:textSize="8pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phr_heart" />

            <EditText
                android:id="@+id/phr_abo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/text_margin_small"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_blood"
                android:inputType="text"
                android:maxLength="20"
                android:textColorHint="@color/colorPrimary"
                android:textSize="8pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_phr_medicine" />

            <EditText
                android:id="@+id/phr_medicine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_medicine"
                android:inputType="text"
                android:maxLength="20"
                android:textColorHint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phr_allergy" />

            <EditText
                android:id="@+id/phr_allergy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_allergy"
                android:inputType="text"
                android:maxLength="20"
                android:textColorHint="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phr_history" />

            <EditText
                android:id="@+id/phr_history"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_history"
                android:inputType="text"
                android:maxLength="5"
                android:textColorHint="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phr_sleeptime" />

            <EditText
                android:id="@+id/phr_sleepTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_sleeptime"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:textColorHint="@color/colorPrimary" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_phr_stride" />

            <EditText
                android:id="@+id/phr_dailyStride"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/phr_dailystride"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textColorHint="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_selector"
            android:text="@string/phr_save_button"
            android:textColor="@color/white"
            android:textSize="8pt" />

    </LinearLayout>
</LinearLayout>
